encryption-chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cryptography
  labels:
    istio-injection: enabled
