encryption-chart/templates/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cryptography-virtualservice
  namespace: cryptography
spec:
  hosts:
  - "cryptography.example.com"  # replace with your actual hostname
  gateways:
  - cryptography-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: cryptography-service.cryptography.svc.cluster.local
          port:
            number: 8001
      rewrite:
        uri: "/"
        authority: cryptography-service.cryptography.svc.cluster.local:8001
